--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %} - FlaskApp</title>
     <style>
+    html,
+        body {
+            height: 100%;
+            width: 100%;
+        }
+
         h2 {
             width: 100%;
         }
@@ -40,16 +46,30 @@
             margin-left: 50px;
             text-decoration: none;
         }
+        .company-logo{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
 
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
+<script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">FlaskApp</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">
+                <div class="company-logo">
+                    <div class="icon">
+                        <img src="{{url_for('static',filename='images/logo.png')}}" width="40px" height="60px">
+                    </div>
+                    <div class="company-name">
+                        <h1>Writer</h1>
+                    </div>
+                </div>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -57,13 +77,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('posts.index') }}">Posts</a>
+                        <a class="nav-link" href="{{ url_for('posts.index') }}">Posts Center</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('posts.categories') }}">Categories</a>
+                        <a class="nav-link" href="{{ url_for('posts.categories') }}">My library</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('library.index') }}">Library</a>
+                        <a class="nav-link" href="{{ url_for('library.index') }}">Public library</a>
                     </li>
                 </ul>
             </div>
@@ -71,9 +91,13 @@
     </nav>
     <div class="container mt-4">
         <hr>
-        <div class="content">
+        <div class="content2">
             {% block content %}{% endblock %}
         </div>
+        <footer class="mt-5 text-center">
+            <p>&copy; 2023 Writer. All rights reserved.</p>
+        </footer>
     </div>
+
 </body>
 </html>
