--- a/app/templates/posts/index.html
+++ b/app/templates/posts/index.html
@@ -12,14 +12,18 @@
         </div>
         <div class="row">
             <div class="col">
-                <form id="note-form" method="POST" action="/posts/add-note" style="display: none;">
+                <form id="note-form" method="POST" action="/posts/add-note" style="display: none;" enctype="multipart/form-data">
                     <div class="mb-3">
                         <label for="title" class="form-label">Title:</label>
-                        <input type="text" class="form-control" id="title" name="title">
+                        <input type="text" class="form-control" id="title" name="title" required>
                     </div>
                     <div class="mb-3">
                         <label for="description" class="form-label">Description:</label>
-                        <div id="description" name="description"></div>
+                        <div id="description" name="description" required></div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="image" class="form-label">Image:</label>
+                        <input type="file" class="form-control" id="image" name="image" required>
                     </div>
                     <button type="submit" class="btn btn-primary save-btn">Save Post</button>
                 </form>
@@ -30,14 +34,23 @@
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col">
-                            <h2 class="mb-3">{{ note['title'] }}</h2>
-                            <p>{{ note['description'] | safe }}</p>
+                            <div class="info-cont">
+                                <div class="img-cont">
+                                    {% if note['image'] %}
+                                        <img src="{{ url_for('static', filename='upload/' + note['image']) }}" alt="Note Image" style="max-width: 200px;">
+                                    {% endif %}
+                                </div>
+                                <div class="title-cont">
+                                    <h2 class="mb-3">{{ note['title'] }}</h2>
+                                    <p>{{ note['description'] | safe }}</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-auto">
                             <button class="btn btn-primary add-chapter-btn" data-note-id="{{ note['id'] }}">Add Chapter</button>
                         </div>
                     </div>
-                    <div class="row chapter-form" id="chapter-form-{{ note['id'] }}" style="display: none;">
+                    <div class="row chapter-form" id="chapter-form-{{ loop.index }}" style="display: none;">
                         <div class="col">
                             <form method="POST" action="/posts/add-chapter">
                                 <div class="form-group">
@@ -45,8 +58,8 @@
                                     <input type="text" class="form-control" id="chapterTitle" name="chapterTitle">
                                 </div>
                                 <div class="form-group">
-                                    <label for="content" class="form-label">Content:</label>
-                                    <div id="content" name="content"></div>
+                                    <label for="content{{ loop.index }}" class="form-label">Content:</label>
+                                    <div id="content{{ loop.index }}" name="content"></div>
                                 </div>
                                 <input type="hidden" name="noteId" value="{{ note['id'] }}">
                                 <button type="submit" class="btn chpt-btn btn-primary">Save Chapter</button>
@@ -54,33 +67,61 @@
                         </div>
                     </div>
                 </li>
-            {% endfor %}
-        </ul>
-
-<script>
+            <script>
     var addChapterButtons = document.getElementsByClassName('add-chapter-btn');
     Array.from(addChapterButtons).forEach(function(button) {
         button.addEventListener('click', function() {
             var noteId = this.getAttribute('data-note-id');
-            var form = document.getElementById('chapter-form-' + noteId);
+            var form = document.getElementById('chapter-form-' + {{ loop.index }});
             form.style.display = form.style.display === 'none' ? 'block' : 'none';
+
+            tinymce.init({
+        selector: '#content{{ loop.index }}',
+        height: 300,
+        menubar: false,
+        plugins: [
+            'advlist autolink lists link image charmap print preview anchor',
+            'searchreplace visualblocks code fullscreen',
+            'insertdatetime media table paste code help wordcount'
+        ],
+        toolbar: 'undo redo | formatselect | ' +
+            'bold italic backcolor | alignleft aligncenter ' +
+            'alignright alignjustify | bullist numlist outdent indent | ' +
+            'removeformat | help',
+        content_css: '//www.tiny.cloud/css/codepen.min.css',
+        setup: function (editor) {
+            editor.on('change', function () {
+                tinymce.triggerSave(); // Save content on change event
+            });
+        }
+    });
         });
     });
 </script>
+            {% endfor %}
+        </ul>
 
-        <script>
-            document.querySelectorAll('.chapter-form form').forEach(function(form) {
-        form.addEventListener('submit', function(event) {
+
+       <!--<script>
+document.querySelectorAll('.chapter-form form').forEach(function(form) {
+    form.addEventListener('submit', function(event) {
         event.preventDefault(); // Prevent the form from submitting normally
 
         var noteId = this.querySelector('input[name="noteId"]').value;
         var chapterTitle = this.querySelector('input[name="chapterTitle"]').value;
 
         // Get the TinyMCE editor instance
-        var editor = tinymce.get('content-' + noteId);
+        var editor = tinymce.get('content');
+
+        console.log(editor.getContent())
 
         // Check if the editor instance exists and get the content
         var chapterContent = editor ? editor.getContent() : '';
+
+        // Check if required fields are not empty
+        if (!noteId || !chapterTitle || !chapterContent) {
+            return alert('Missing required fields');
+        }
 
         // Create a hidden input field for chapter content
         var contentInput = document.createElement('input');
@@ -97,7 +138,9 @@
 });
 
 
-        </script>
+
+
+        </script>-->
 
     <script>
         document.getElementById('show-form-btn').addEventListener('click', function() {
@@ -126,26 +169,7 @@
             'removeformat | help',
         content_css: '//www.tiny.cloud/css/codepen.min.css'
     });
-    tinymce.init({
-        selector: '#content',
-        height: 300,
-        menubar: false,
-        plugins: [
-            'advlist autolink lists link image charmap print preview anchor',
-            'searchreplace visualblocks code fullscreen',
-            'insertdatetime media table paste code help wordcount'
-        ],
-        toolbar: 'undo redo | formatselect | ' +
-            'bold italic backcolor | alignleft aligncenter ' +
-            'alignright alignjustify | bullist numlist outdent indent | ' +
-            'removeformat | help',
-        content_css: '//www.tiny.cloud/css/codepen.min.css',
-        setup: function (editor) {
-            editor.on('change', function () {
-                tinymce.triggerSave(); // Save content on change event
-            });
-        }
-    });
+
 </script>
 
 
@@ -170,6 +194,16 @@
         .chpt-btn{
             margin-top: 2%;
             margin-bottom: 1%;
+        }
+
+        .info-cont{
+            display: flex;
+            flex-direction: row;
+        }
+        .title-cont{
+            display: flex;
+            flex-direction: column;
+            padding: 2%;
         }
     </style>
 
