--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,7 +51,27 @@
             flex-direction: row;
             align-items: center;
         }
+        .logout-button {
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
 
+    .logout-button img {
+        width: 50px;
+        height: 50px;
+        margin-right: 5px;
+    }
+
+    .dropdown-menu {
+        min-width: 100px;
+    }
+    .log-div{
+        cursor:pointer;
+    }
+    .log-div i{
+        margin-left: 30%;
+    }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -75,6 +95,11 @@
                 content_css: '//www.tiny.cloud/css/codepen.min.css'
             });
 </script>
+    <script>
+        function logout() {
+            document.getElementById("form-logout").submit();
+        }
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -103,6 +128,22 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('library.index') }}">Public library</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="logout-button ml-auto">
+                <a class="nav-link dropdown-toggle" href="#" id="logoutDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <img src="{{url_for('static',filename='images/user.png')}}" alt="Logout">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="logoutDropdown">
+                    <li>
+                        <form id="form-logout" method="POST" action="/logout" enctype="multipart/form-data">
+                            <div class="logout-button log-div" onclick="logout()">
+                                <i class="fas fa-sign-out-alt"></i>
+                                <span>Logout</span>
+                            </div>
+                        </form>
                     </li>
                 </ul>
             </div>
