--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -78,7 +78,8 @@
 <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <script src="https://cdn.tiny.cloud/1/jhy0ecp6sp8ixh46fh73gh6lkci6lnn7fj7o1clfcx5mpm6t/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
-<script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script>
     tinymce.init({
                 selector: '#descriptionEdit',
                 height: 300,
